# gmimc-test

./: Cargo.toml  LICENSE  README.md
benches/: field_perf.rs  gmimc_perf.rs
results/: scatter_plot_hash_result.ipynb
results/.ipynb_checkpoints/: scatter_plot_hash_result-checkpoint.ipynb
src/: avalanche.rs  constants.rs  field.rs  gmimc.rs  lib.rs  main.rs
